replace new operator with valueOf factory method (final part)