@@ -9,10 +9,10 @@ mailto:contact@independit.de
 
 This file is part of schedulix
 
-schedulix is free software: 
-you can redistribute it and/or modify it under the terms of the 
-GNU Affero General Public License as published by the 
-Free Software Foundation, either version 3 of the License, 
+schedulix is free software:
+you can redistribute it and/or modify it under the terms of the
+GNU Affero General Public License as published by the
+Free Software Foundation, either version 3 of the License,
 or (at your option) any later version.
 
 This program is distributed in the hope that it will be useful,
@@ -39,8 +39,8 @@ class Libjni
 	public static final String version   = SystemEnvironment.programVersion;
 	public static final String protocol  = "1.1";
 
-	public static final Boolean alive    = new Boolean(true);
-	public static final Boolean dead     = new Boolean(false);
+	public static final Boolean alive    = Boolean.valueOf(true);
+	public static final Boolean dead     = Boolean.valueOf(false);
 
 	private static final String unixEnv  = "/bin/sh -c env";
 	private static final String winEnv   = "CMD.EXE /C SET";
