@@ -86,7 +86,7 @@ RUNLOOP:	while (run) {
 						String msg = new String(d.getData(), 0, d.getLength());
 						try {
 							Server.notified = true;
-							Notifier.interrupt(new Long(0L));
+							Notifier.interrupt(Long.valueOf(0L));
 						} catch(NumberFormatException nfe) {
 							Trace.error("[WakeupThread] got a message I don't understand : >" + msg + "< (length : " + msg.length() + ")");
 							Trace.error("[WakeupThread] offending IP : " + d.getAddress().toString() + ", Port : " + d.getPort());
